<resources>
    <string name="app_name">android_kotlin_learning</string>
    <string name="hi_m_fadi">Hi\'m Fadi</string>
    <string name="welcome">Lets Count Together</string>
    <string name="Plus">Plus</string>
    <string name="Minus">Minus</string>
    <string name="reset">Reset</string>
    <string name="Welcome">Welcome to our restaurant</string>
    <string name="Burger">Which kind of burger you need to order ?</string>
    <string name="Extras">Which Extras you want to add ?</string>
    <string name="Cheese">Cheese</string>
    <string name="Salad">Salad</string>
    <string name="Onion">Onion</string>
    <string name="Beef">Beef</string>
    <string name="Chicken">Chicken</string>
    <string name="Shrimp">Shrimp</string>
    <string name="Order">Order</string>
    <string name="app_logo">App Logo</string>
    <string name="welcome_to_bolt">Welcome to Bolt</string>
    <string name="explore_us">Explore Us</string>
    <string name="title_activity_uber_login">UberLoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in_to_continue">Log in to continue</string>
    <string name="forget_password">Forget Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="log_in">Log in</string>
    <string name="sign_un">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_to_continue">Sign Up to continue</string>
    <string name="name">Name</string>
    <string name="counter_app">Counter App</string>
    <string name="restaurant_app">Restaurant App</string>
    <string name="uber_app">Uber App</string>
    <string name="already_have_an_acoount">Already have an acoount?</string>
    <string name="add">ADD</string>
    <string name="lorem_ipsum">Lorem_ipsum</string>
    <string name="todo_list">Todo list</string>
    <string name="drawable_screen">Drawable Screen</string>
    <string name="my_password">My password</string>
    <string name="my_phone">My phone</string>
    <string name="my_email">My Email</string>
    <string name="my_name">My Name</string>
    <string name="wertatanifadi_gmial_com">Wertatanifadi@gmial.com</string>
    <string name="fadi">Fadi</string>
    <string name="just_a_drawable">Just a drawable</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="archive_fragment">Archive Fragment</string>
    <string name="starred_fragment">Starred Fragment</string>
    <string name="send_fragment">Send Fragment</string>
    <string name="inbox_fragment">Inbox Fragment</string>
    <string name="plus">+</string>
    <string name="put_your_note_here">Put your note here :</string>
    <string name="new_item">New Item</string>
    <string name="add_item_name">Add Item Name</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="minus">-</string>
    <string name="cancel">Cancel</string>
    <string name="shopping_item_list">Shopping Item List</string>
    <string name="notes_app">Notes App</string>
    <string name="notes_title">Notes Title :</string>
    <string name="enter_your_notes">Enter your notes</string>
    <string name="enter_you_notes_title">Enter you notes title</string>
    <string name="character_photo">Character photo</string>
    <string name="post_title">Post title</string>
    <string name="delete">Delete</string>
    <string name="add_post">Add Post</string>
</resources>