<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".restaurant_app.ResrtaurantMenuActivity">

    <TextView
        android:id="@+id/WelcomeToOurRestaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#F00"
        />
    <TextView
        android:id="@+id/Burger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Burger"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="#000"
        />
    <RadioGroup
        android:id="@+id/rgBurgers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:id="@+id/rbBeef"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Beef"
            android:layout_weight="1"
            />
        <RadioButton
            android:id="@+id/rbChicken"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Chicken"
            android:layout_weight="1"
            />
        <RadioButton
            android:id="@+id/rbShrimp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/Shrimp"
            android:layout_weight="1"
            />
    </RadioGroup>
    <TextView
        android:id="@+id/Extras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Extras"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="#000"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <CheckBox
            android:id="@+id/chbCheese"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Cheese"
            />
        <CheckBox
            android:id="@+id/chbSalad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Salad"
            />
        <CheckBox
            android:id="@+id/chbOnion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Onion"
            />
    </LinearLayout>
    <Button
        android:id="@+id/btnOrder"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Order"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/Result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="25sp"
        />

</LinearLayout>