<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen">

    <Button
        android:id="@+id/ActivityCounter"
        android:layout_width="370dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/counter_app"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ActivityRestaurant"
        android:layout_width="370dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/restaurant_app"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ActivityCounter" />

    <Button
        android:id="@+id/ActivityUberApp"
        android:layout_width="370dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/uber_app"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ActivityRestaurant" />

</androidx.constraintlayout.widget.ConstraintLayout>